--- a/index.html
+++ b/index.html
@@ -185,17 +185,17 @@
               "save_image": false,
               "studies": [
                   "STD;MA%Ribbon",
-                  "STD;RSI"
+                  "STD;Divergence%1Indicator"
               ],
               "hide_volume": true,
               "support_host": "https://www.tradingview.com",
               "container_id": containerId
           });
       }
-      createChart("chart1", "BINANCE:1000PEPEUSDT.P");
-      createChart("chart2", "BINANCE:DOGEUSDT.P");
-      createChart("chart3", "BINANCE:BNBUSDT.P");
-      createChart("chart4", "BINANCE:SUIUSDT.P");
+      createChart("chart1", "BINANCE:BTCUSDT.P");
+      createChart("chart2", "BINANCE:SOLUSDT.P");
+      createChart("chart3", "BINANCE:XRPUSDT.P");
+      createChart("chart4", "BINANCE:DOGEUSDT.P");
     </script>
     <script type="text/javascript">
       function toggleFullscreen(event, chartId) {
