--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
               "container_id": containerId
           });
       }
-      createChart("chart1", "BINANCE:BTCUSDT.P");
+      createChart("chart1", "BINANCE:ETHUSDT.P");
       createChart("chart2", "BINANCE:SOLUSDT.P");
       createChart("chart3", "BINANCE:XRPUSDT.P");
       createChart("chart4", "BINANCE:DOGEUSDT.P");
