--- a/index.html
+++ b/index.html
@@ -184,8 +184,7 @@
               "allow_symbol_change": true,
               "save_image": false,
               "studies": [
-                  "STD;MA%Ribbon",
-                  "STD;Divergence%1Indicator"
+                  "STD;MA%Cross"
               ],
               "hide_volume": true,
               "support_host": "https://www.tradingview.com",
