--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
               "allow_symbol_change": true,
               "save_image": false,
               "studies": [
-                  "STD;MA%Cross"
+                  "STD;MA%1Cross"
               ],
               "hide_volume": true,
               "support_host": "https://www.tradingview.com",
