--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         padding: 0;
         height: 100%;
         width: 100%;
-        background: #3d3d3d;
+        background: #ffffff;
         overflow: hidden;
       }
       .alert {
@@ -38,7 +38,6 @@
         justify-content: space-between;
         padding: 5px;
         font-size: 14px;
-        color: #ffffff;
         font-family: Dejavu Sans, sans-serif;
         height: 3vh;
         width: 100vw;
@@ -54,13 +53,12 @@
         padding-left: 0.25vw;
       }
       .input-box {
-        background: #555555;
+        background: #eeeeee;
         border: 1px;
         border-radius: 5px;
         padding: 3px;
         width: 50px;
         text-align: center;
-        color: #ffffff;
       }
       input::-webkit-outer-spin-button,
       input::-webkit-inner-spin-button {
@@ -72,8 +70,8 @@
       }
       .clock {
         padding: 1vw;
-        border: 1px solid #999999;
-        background-color: #555555;
+        background-color: #eeeeee;
+        border-radius: 25px;
       }
       .grid-container {
         display: grid;
@@ -89,13 +87,13 @@
       .chart-box.fullscreen {
         height: 95.25vh !important;
         width: 100vw !important;
-        background: #3d3d3d;
+        background: #d9dadb;
       }
       .fullscreen-btn {
         display: block;
         background: none;
         padding: 0;
-        color: #3d3d3d;
+        color: #d9dadb;
         border: none;
         font-size: 25px;
       }
@@ -176,7 +174,7 @@
               "symbol": symbol,
               "interval": "15",
               "timezone": "Asia/Kolkata",
-              "theme": "dark",
+              "theme": "light",
               "style": "1",
               "locale": "en",
               "hide_top_toolbar": true,
