--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         padding: 0;
         height: 100%;
         width: 100%;
-        background: #ffffff;
+        background: #d9dadb;
         overflow: hidden;
       }
       .alert {
@@ -36,10 +36,9 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 5px;
         font-size: 14px;
         font-family: Dejavu Sans, sans-serif;
-        height: 3vh;
+        height: 4.25vh;
         width: 100vw;
         user-select: none;
         -webkit-user-select: none;
@@ -47,10 +46,10 @@
         -ms-user-select: none;
       }
       .margin-calculator {
-        display: flex;
-        gap: 2vw;
-        align-items: center;
-        padding-left: 0.25vw;
+        margin: 0;
+        padding: 0.5% 2.5% 0.5% 1%;
+        background-color: #ffffff;
+        clip-path: polygon(0 0, 95% 0, 100% 100%, 0 100%);
       }
       .input-box {
         background: #eeeeee;
@@ -69,9 +68,11 @@
         outline: none;
       }
       .clock {
-        padding: 1vw;
-        background-color: #eeeeee;
-        border-radius: 25px;
+        margin: 0;
+        padding: 1% 1% 1% 1.75%;
+        background-color: #ffffff;
+        clip-path: polygon(23% 0, 100% 0, 100% 100%, 0 100%);
+
       }
       .grid-container {
         display: grid;
