--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@
               "allow_symbol_change": true,
               "save_image": false,
               "studies": [
-                  "STD;MA%Ribbon"
+                  "STD;MA%Ribbon",
+                  "STD;Divergence%1Indicator"
               ],
               "hide_volume": true,
               "support_host": "https://www.tradingview.com",
