--- a/index.html
+++ b/index.html
@@ -241,5 +241,12 @@
         }
       }
     </script>
+    <script id="shift-F">
+      document.addEventListener('keydown', function (event) {
+        if (event.shiftKey && event.key.toLowerCase() === 'f') {
+          document.documentElement.requestFullscreen();
+        }
+      });
+    </script>
   </body>
 </html>
