--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg" sizes="32x32" href="logo.svg">
-    <link rel="icon" type="image/svg" sizes="16x16" href="logo.svg">
-    <link rel="shortcut icon" href="logo.svg">
-    <link rel="mask-icon" href="logo.svg" color="#5bbad5">
+    <link rel="icon" type="image/svg" sizes="32x32" href="icon.png">
+    <link rel="icon" type="image/svg" sizes="16x16" href="icon.png">
+    <link rel="shortcut icon" href="icon.png">
+    <link rel="mask-icon" href="icon.png" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#2e2e2e">
-    <meta name="msapplication-TileImage" content="logo.svg">
+    <meta name="msapplication-TileImage" content="icon.png">
     <title>Meta Terminal</title>
     <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
     <style>
