--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         padding: 0;
         height: 100%;
         width: 100%;
-        background: #d9dadb;
+        background: #2d2d2d;
+        color: #d9dadb;
         overflow: hidden;
       }
       .alert {
@@ -48,11 +49,12 @@
       .margin-calculator {
         margin: 0;
         padding: 0.5% 2.5% 0.5% 1%;
-        background-color: #ffffff;
+        background-color: #000;
         clip-path: polygon(0 0, 95% 0, 100% 100%, 0 100%);
       }
       .input-box {
-        background: #eeeeee;
+        background: #111;
+        color: #d9dadb;
         border: 1px;
         border-radius: 5px;
         padding: 3px;
@@ -70,7 +72,7 @@
       .clock {
         margin: 0;
         padding: 1% 1% 1% 1.75%;
-        background-color: #ffffff;
+        background-color: #000;
         clip-path: polygon(23% 0, 100% 0, 100% 100%, 0 100%);
 
       }
@@ -88,13 +90,13 @@
       .chart-box.fullscreen {
         height: 95.25vh !important;
         width: 100vw !important;
-        background: #d9dadb;
+        background: #2d2d2d;
       }
       .fullscreen-btn {
         display: block;
         background: none;
         padding: 0;
-        color: #d9dadb;
+        color: #2d2d2d;
         border: none;
         font-size: 25px;
       }
@@ -176,7 +178,7 @@
               "symbol": symbol,
               "interval": "15",
               "timezone": "Asia/Kolkata",
-              "theme": "light",
+              "theme": "dark",
               "style": "1",
               "locale": "en",
               "hide_top_toolbar": true,
